# graphene-django-precommit-hook

./: .pre-commit-hooks.yaml  README.md  entrypoint.sh  graphene_django_hook.py  requirements-dev.txt  setup.cfg
.github/workflows/: python-publish.yml
