[metadata]
name = graphene_django_hook
version = 0.8.0
description = Generate graphql schema.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackton1/graphene-django-precommit-hook
author = Tonye Jack
author_email = tonyejck@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6.1
